@@ -5,6 +5,8 @@
 BZFlag 1.11
 -----------
 
+* Poll to reset flags and Poll-cheating prevention - Ian Agar
+* Flag and Tank Entry Zones - Dave Brosius
 * QuickTurn flag symbol changed from A to QT - Sean Morrison
 * Added MAC's handicap game style - Sean Morrison
 * Added ReverseControls bad flag - Sean Morrison
